--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wedding Moments</title>
+  <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.boho-weddings.com%2F221744%2Fdiy-back-garden-wedding%2F&psig=AOvVaw1qeo0hM6hqmVxu77lFedCH&ust=1752252990610000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIDR7NHlso4DFQAAAAAdAAAAABAE">
+
   <style>
     body, html {
       margin: 0;
