--- a/index.html
+++ b/index.html
@@ -95,7 +95,16 @@
   </style>
 </head>
 <body>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '38762642520651ec6d28134f90f326da',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/38762642520651ec6d28134f90f326da/invoke.js"></script>
   <header class="header">
     Wedding Moments
     <div class="subtitle">Capturing Love Without Faces</div>
@@ -141,6 +150,6 @@
   <footer>
     &copy; 2025 Wedding Moments | Designed with ❤️
   </footer>
-
+<script type='text/javascript' src='//pl27132320.profitableratecpm.com/c6/19/25/c61925503daed938df46035217638a9e.js'></script>
 </body>
 </html>
