--- a/index.html
+++ b/index.html
@@ -149,6 +149,18 @@
   <footer>
     &copy; 2025 Wedding Moments | Designed with ❤️
   </footer>
+	 <!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,4962641,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4962641&101" alt="free website stats program" border="0"></a></noscript>
+<!-- Histats.com  END  -->
 <script type='text/javascript' src='//pl27132320.profitableratecpm.com/c6/19/25/c61925503daed938df46035217638a9e.js'></script>
 </body>
 </html>
